[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "dockerctx"
author = "Caleb Hattingh"
author-email = "caleb.hattingh@gmail.com"
home-page = "https://github.com/cjrh/dockerctx"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
description-file = "README.rst"
requires = [
    "docker",
    "typing; python_version < '3.5'",
    "psycopg2-binary",
]

[tool.flit.metadata.requires-extra]
"dev" = [
    "sqlalchemy",
    "sqlalchemy_utils",
    "sqllogformatter",
    "pytest",
    "redis",
]
